// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should be structurally sound 1`] = `
<vime-menu-radio-group value="1">
  <!---->
  <vime-menu-radio label="one" value="1">
    <vime-menu-item checked="" checkedicon="#vime-checkmark" label="one"></vime-menu-item>
  </vime-menu-radio>
  <vime-menu-radio label="two" value="2">
    <vime-menu-item checkedicon="#vime-checkmark" label="two"></vime-menu-item>
  </vime-menu-radio>
  <vime-menu-radio label="three" value="3">
    <vime-menu-item checkedicon="#vime-checkmark" label="three"></vime-menu-item>
  </vime-menu-radio>
</vime-menu-radio-group>
`;

exports[`should turn off checked radios on change 1`] = `
<vime-menu-radio-group value="1">
  <!---->
  <vime-menu-radio label="one" value="1">
    <vime-menu-item checkedicon="#vime-checkmark" label="one"></vime-menu-item>
  </vime-menu-radio>
  <vime-menu-radio label="two" value="2">
    <vime-menu-item checked="" checkedicon="#vime-checkmark" label="two"></vime-menu-item>
  </vime-menu-radio>
  <vime-menu-radio label="three" value="3">
    <vime-menu-item checkedicon="#vime-checkmark" label="three"></vime-menu-item>
  </vime-menu-radio>
</vime-menu-radio-group>
`;
